# microgroove

./: .gitignore  LICENSE  README.md  default.nix  microgroove.cabal  package.yaml  shell.nix  stack.yaml
src/Data/: Microgroove.hs
src/Data/Microgroove/: Index.hs  Lib.hs  MRec.hs  Mutable.hs  Rec.hs  Type.hs  TypeLevel.hs
src/Data/Microgroove/Lib/: Cast.hs  Exists.hs  TypeLevel.hs  Vector.hs
src/Data/Microgroove/Mutable/: Type.hs
