name:                microgroove
version:             0.1.0.0
synopsis:           Fast access extensible records
-- description:
homepage:            https://github.com/daig/microgroove
license:             BSD3
license-file:        LICENSE
author:              Dai
maintainer:          dai@sodality.cc
copyright:           2017 Dai
category:            Records
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Microgroove.Rec
                      ,Data.Microgroove.MRec
                      ,Data.Microgroove.TypeLevel
                      ,Data.Microgroove.Lib
  build-depends:       base >= 4.7 && < 5
                      ,vector
                      ,primitive
  default-language:    Haskell2010
  default-extensions: RankNTypes
                     ,LambdaCase
                     ,ConstraintKinds
                     ,TypeFamilies
                     ,FlexibleInstances
                     ,ViewPatterns
                     ,PatternSynonyms
                     ,TypeOperators
                     ,GADTs
                     ,DataKinds
                     ,PolyKinds
                     ,KindSignatures
                     ,TypeApplications
                     ,ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/daig/microgroove
